--- a/基于链式存储结构的线性表实现/基于链式存储结构的线性表实现.vcxproj
+++ b/基于链式存储结构的线性表实现/基于链式存储结构的线性表实现.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="llist.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="llist.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F653465C-373B-4173-AD23-C98576F54C91}</ProjectGuid>
@@ -110,8 +116,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
